<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/budget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget_title"
        android:textSize="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >




            <TextView
                android:id="@+id/open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myopen" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >





            <TextView
                android:id="@+id/open_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account" />





            <TextView
                android:id="@+id/open_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item" />





            <TextView
                android:id="@+id/open_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />





            <TextView
                android:id="@+id/open_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />





            <TextView
                android:id="@+id/open_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />

            <TextView
                android:id="@+id/open_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >






            <TextView
                android:id="@+id/with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mywith" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >




            <TextView
                android:id="@+id/with_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account" />





            <TextView
                android:id="@+id/with_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item" />





            <TextView
                android:id="@+id/with_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />





            <TextView
                android:id="@+id/with_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />





            <TextView
                android:id="@+id/with_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state" />

            <TextView
                android:id="@+id/with_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

    </TableLayout>

</LinearLayout>