<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/myorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myorder"
        android:textSize="20dp" />

    <TableLayout
        android:id="@+id/open_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >

            <TextView
                android:id="@+id/myopen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myopen"
                android:textSize="15dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/open_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name" />

            <TextView
                android:id="@+id/inform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inform" />

            <TextView
                android:id="@+id/open_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/with_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/mywith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mywith"
                android:textSize="15dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/my_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name" />

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <TextView
                android:id="@+id/my_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

        </TableRow>

    </TableLayout>

</LinearLayout>