<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/store_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_info_title"
        android:textSize="20dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_name" />

            <TextView
                android:id="@+id/store_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/store_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_tel" />

            <TextView
                android:id="@+id/store_tel_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/store_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_add" />

            <TextView
                android:id="@+id/store_add_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu" />

            <ImageView
                android:id="@+id/menu_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/down_button_tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal" >

        <Button
            android:id="@+id/open_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open" />
        
           <Button
               android:id="@+id/with_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/with" />

    </TableRow>

</LinearLayout>